[ADDED] terrian2d fileio
Former-commit-id: 47e214c69fe4fa3fd773662a10cd85325e9f4bbf

--- a/easyterrain2d/platform/msvc2008/projects/libterrain2d.vcproj
+++ b/easyterrain2d/platform/msvc2008/projects/libterrain2d.vcproj
@@ -289,6 +289,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="fileio"
+			>
+			<File
+				RelativePath="..\..\..\src\libterrain2d\FileIO.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libterrain2d\FileIO.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libterrain2d\config.h"
 			>
