[FIXED] easyejoy proj
Former-commit-id: 79a31d073875b5213cab61495ff286895429797b

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "editor-external"]
 	path = editor-external
 	url = ssh://git@oa.ejoy.com/users/zz/editor-external.git
+[submodule "ejoy2d/external/dtex"]
+	path = ejoy2d/external/dtex
+	url = ssh://git@oa.ejoy.com/users/zz/dtex.git
