--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../external/c99;../../../external/tools;../../../external/cjson;../../../external/lzma/include;../../../external/pthread/include"
+				AdditionalIncludeDirectories="../../../src;../../../external/tools;;../../../external/dtex;&quot;../../../../editor-external/cjson/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/pthread/include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -107,7 +107,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../../../external/c99;../../../external/tools;../../../external/cjson;../../../external/lzma/include;../../../external/pthread/include"
+				AdditionalIncludeDirectories="../../../src;../../../external/tools;;../../../external/dtex;&quot;../../../../editor-external/cjson/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/pthread/include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -185,134 +185,138 @@
 				>
 			</File>
 		</Filter>
-		<File
-			RelativePath="..\..\..\src\dtex_async.c"
+		<Filter
+			Name="dtex"
 			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_async.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_buffer.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_buffer.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c1.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c1.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c2.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c2.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c3.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c3.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_draw.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_draw.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_facade.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_facade.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_fbo.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_fbo.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_loader.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_loader.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_packer.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_packer.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_pts.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_pts.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_pvr.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_pvr.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_rrp.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_rrp.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_texture.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_texture.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_typedef.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_typedef.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_utility.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_utility.h"
-			>
-		</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_async.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_async.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_buffer.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_buffer.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_c1.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_c1.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_c2.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_c2.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_c3.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_c3.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_draw.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_draw.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_facade.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_facade.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_fbo.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_fbo.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_loader.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_loader.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_packer.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_packer.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_pts.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_pts.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_pvr.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_pvr.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_rrp.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_rrp.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_texture.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_texture.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_typedef.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_typedef.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_utility.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_utility.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\eploader.c"
 			>
