--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src\easyanimation;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easybuilder\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyanim\src;..\..\..\..\easyimage\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\rapidxml\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\src\easyanimation;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easybuilder\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyanim\src;..\..\..\..\easyimage\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;..\..\..\..\editor-external\c99;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\rapidxml\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src\easyanimation;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easybuilder\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyanim\src;..\..\..\..\easyimage\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\rapidxml\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\src\easyanimation;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easybuilder\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyanim\src;..\..\..\..\easyimage\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;..\..\..\..\editor-external\c99;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\rapidxml\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -286,10 +286,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\easyanimation\frame\main.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\..\drag2d\src\common\rapidxml-1.13\rapidxml.hpp"
 				>
 			</File>
 			<Filter
