--- a/easymodeling/platform/msvc2008/projects/easymodeling.vcproj
+++ b/easymodeling/platform/msvc2008/projects/easymodeling.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\src\easymodeling;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easyshape\src;..\..\..\..\easybuilder\src;..\..\..\..\easyphysics\src;..\..\..\..\easyphysics\external\box2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;..\..\..\..\easyphysics\external\box2d\include"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\src\easymodeling;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easyshape\src;..\..\..\..\easybuilder\src;..\..\..\..\easyphysics\src;..\..\..\..\easyphysics\external\box2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;..\..\..\..\editor-external\c99;&quot;..\..\..\..\editor-external\lua\include&quot;;..\..\..\..\easyphysics\external\box2d\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -123,7 +123,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\src\easymodeling;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easyshape\src;..\..\..\..\easybuilder\src;..\..\..\..\easyphysics\src;..\..\..\..\easyphysics\external\box2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;..\..\..\..\easyphysics\external\box2d\include"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\src\easymodeling;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easyshape\src;..\..\..\..\easybuilder\src;..\..\..\..\easyphysics\src;..\..\..\..\easyphysics\external\box2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;..\..\..\..\editor-external\c99;&quot;..\..\..\..\editor-external\lua\include&quot;;..\..\..\..\easyphysics\external\box2d\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
