--- a/easypacker/platform/msvc2008/projects/easypacker.vcproj
+++ b/easypacker/platform/msvc2008/projects/easypacker.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src\easypacker;..\..\..\external\RectangleBinPack;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easybuilder\src;..\..\..\..\easyphysics\src;..\..\..\..\easyphysics\external\box2d;..\..\..\..\easyshape\src;..\..\..\..\easypacker\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;..\..\..\..\easyphysics\external\box2d\include"
+				AdditionalIncludeDirectories="..\..\..\src\easypacker;..\..\..\external\RectangleBinPack;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easybuilder\src;..\..\..\..\easyphysics\src;..\..\..\..\easyphysics\external\box2d;..\..\..\..\easyshape\src;..\..\..\..\easypacker\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;..\..\..\..\editor-external\c99;&quot;..\..\..\..\editor-external\lua\include&quot;;..\..\..\..\easyphysics\external\box2d\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src\easypacker;..\..\..\external\RectangleBinPack;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easybuilder\src;..\..\..\..\easyphysics\src;..\..\..\..\easyphysics\external\box2d;..\..\..\..\easyshape\src;..\..\..\..\easypacker\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;..\..\..\..\easyphysics\external\box2d\include"
+				AdditionalIncludeDirectories="..\..\..\src\easypacker;..\..\..\external\RectangleBinPack;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easybuilder\src;..\..\..\..\easyphysics\src;..\..\..\..\easyphysics\external\box2d;..\..\..\..\easyshape\src;..\..\..\..\easypacker\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;..\..\..\..\editor-external\c99;&quot;..\..\..\..\editor-external\lua\include&quot;;..\..\..\..\easyphysics\external\box2d\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
