[FIXED] ejoy2d和easy2d之间交替控制shader
Former-commit-id: cb9d54139f519b19c30d1738976f4e9960abc0f0

--- a/easyejoy2d/platform/msvc2008/projects/easyejoy2d.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/easyejoy2d.vcproj
@@ -189,6 +189,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\easyejoy2d\EJShader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easyejoy2d\EJShader.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easyejoy2d\EJSprite.cpp"
 				>
 			</File>
