[ADDED] support for creating sprite from single image file
Former-commit-id: 390e2d9eda87e81c3ca45ce505635d46253dc773

--- a/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
@@ -265,6 +265,14 @@
 				RelativePath="..\..\..\src\testdtex\TestC3.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\testdtex\TestDSprite.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\testdtex\TestDSprite.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
