[ADDED] ejoy2d symbol
Former-commit-id: be2db0a8e10a9ec9d3af28924fa64d67e64f7288

--- a/easyejoy2d/platform/msvc2008/projects/easyejoy2d.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/easyejoy2d.vcproj
@@ -204,6 +204,14 @@
 				RelativePath="..\..\..\src\easyejoy2d\EJSprite.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\easyejoy2d\PackageMgr.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easyejoy2d\PackageMgr.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\easyejoy2d\config.h"
