[ADDED] some test for dtex
Former-commit-id: 6f7b825e656da9bf06bc06a08e1f2293c8eac252

--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -330,6 +330,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\package.c"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\package.h"
 			>
 		</File>
