[ADDED] trans to pvr
Former-commit-id: 7f06d471ecf3e7a9687a2698eac8e0447938fa79

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -425,6 +425,18 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="format"
+					>
+					<File
+						RelativePath="..\..\..\src\easydb\PNG2PVR.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb\PNG2PVR.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="json"
