add trans to pvr
Former-commit-id: c3ff42a40e14d9324c2999a068facbcebc438bcf

--- a/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
@@ -290,6 +290,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\testdtex\TestRRP_C2C3_PVR.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\testdtex\TestRRP_C2C3_PVR.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\testdtex\TestSprite.cpp"
 				>
 			</File>
