--- a/epbin/platform/msvc2008/projects/libepbin.vcproj
+++ b/epbin/platform/msvc2008/projects/libepbin.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../external/dtex;../../../../ejoy2d/src;../../../../ejoy2d/external/dtex;&quot;../../../../editor-external/libpng/include&quot;;&quot;../../../../editor-external/lua/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/json/include&quot;;&quot;../../../../editor-external/c99&quot;;..\..\..\..\drag2d\src\drag2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;../../../../easyimage/src"
+				AdditionalIncludeDirectories="../../../../ejoy2d/src;../../../../ejoy2d/external/dtex;&quot;../../../../editor-external/libpng/include&quot;;&quot;../../../../editor-external/lua/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/json/include&quot;;&quot;../../../../editor-external/c99&quot;;..\..\..\..\drag2d\src\drag2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;../../../../easyimage/src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../../../external/dtex;../../../../ejoy2d/src;../../../../ejoy2d/external/dtex;&quot;../../../../editor-external/libpng/include&quot;;&quot;../../../../editor-external/lua/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/json/include&quot;;&quot;../../../../editor-external/c99&quot;;..\..\..\..\drag2d\src\drag2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;../../../../easyimage/src"
+				AdditionalIncludeDirectories="../../../../ejoy2d/src;../../../../ejoy2d/external/dtex;&quot;../../../../editor-external/libpng/include&quot;;&quot;../../../../editor-external/lua/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/json/include&quot;;&quot;../../../../editor-external/c99&quot;;..\..\..\..\drag2d\src\drag2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;../../../../easyimage/src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
