--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -257,6 +257,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\external\dtex\dtex_math.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\external\dtex\dtex_packer.c"
 				>
 			</File>
