finish rrr test
Former-commit-id: dd793bd1baa6f4081344f3cb3dacb5d06cddceac

--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -257,6 +257,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\external\dtex\dtex_gl.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\external\dtex\dtex_gl.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\external\dtex\dtex_loader.c"
 				>
 			</File>
