[ADDED] trans etc1
Former-commit-id: a2be6b7cddededb9640aa83e753a0bc91f58434a

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -445,6 +445,14 @@
 					Name="format"
 					>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\TransToETC1.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\TransToETC1.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb\TransToPVR.cpp"
 						>
 					</File>
