add test etc1's epp
Former-commit-id: f766afe0d394d0274fb9bc2b41d5710db4dffa19

--- a/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
@@ -282,6 +282,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\testdtex\TestEPP.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\testdtex\TestEPP.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\testdtex\TestETC1.cpp"
 				>
 			</File>
