--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,8 @@ raiden/platform/msvc2008/raiden
 shootbubble/platform/msvc2008/shootbubble
 easyejoy2d/platform/msvc2008/easyejoy2d
 easyejoy2d/platform/msvc2008/testdtex
+easymap/platform/msvc2008/easymap
+easymap/platform/msvc2008/libmap
 
 easy3d/platform/msvc2008/easy3d
 easyphysics/platform/msvc2008/easyphysics
