--- a/easytexture/platform/msvc2008/projects/libtexture.vcproj
+++ b/easytexture/platform/msvc2008/projects/libtexture.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="libmap"
+	Name="libtexture"
 	ProjectGUID="{02A5FE18-62B6-4471-953C-1650CBD6C34C}"
-	RootNamespace="libmap"
+	RootNamespace="libtexture"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="..\libmap\x86\Debug"
-			IntermediateDirectory="..\libmap\x86\Debug\obj"
+			OutputDirectory="..\libtexture\x86\Debug"
+			IntermediateDirectory="..\libtexture\x86\Debug\obj"
 			ConfigurationType="4"
 			CharacterSet="1"
 			>
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easycomplex\src;..\..\..\..\easyscale9\src;..\..\..\..\easymesh\src;..\..\..\..\easyanim\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easyshape\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -80,8 +80,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="..\libmap\x86\Release"
-			IntermediateDirectory="..\libmap\x86\Release\obj"
+			OutputDirectory="..\libtexture\x86\Release"
+			IntermediateDirectory="..\libtexture\x86\Release\obj"
 			ConfigurationType="4"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easycomplex\src;..\..\..\..\easyscale9\src;..\..\..\..\easymesh\src;..\..\..\..\easyanim\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -152,19 +152,19 @@
 				Name="library"
 				>
 				<File
-					RelativePath="..\..\..\src\libmap\LibraryPage.cpp"
+					RelativePath="..\..\..\src\libtexture\LibraryPage.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libmap\LibraryPage.h"
+					RelativePath="..\..\..\src\libtexture\LibraryPage.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libmap\LibraryPanel.cpp"
+					RelativePath="..\..\..\src\libtexture\LibraryPanel.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libmap\LibraryPanel.h"
+					RelativePath="..\..\..\src\libtexture\LibraryPanel.h"
 					>
 				</File>
 			</Filter>
@@ -172,19 +172,19 @@
 				Name="stage"
 				>
 				<File
-					RelativePath="..\..\..\src\libmap\StageCanvas.cpp"
+					RelativePath="..\..\..\src\libtexture\StageCanvas.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libmap\StageCanvas.h"
+					RelativePath="..\..\..\src\libtexture\StageCanvas.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libmap\StagePanel.cpp"
+					RelativePath="..\..\..\src\libtexture\StagePanel.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libmap\StagePanel.h"
+					RelativePath="..\..\..\src\libtexture\StagePanel.h"
 					>
 				</File>
 			</Filter>
@@ -192,11 +192,11 @@
 				Name="toolbar"
 				>
 				<File
-					RelativePath="..\..\..\src\libmap\ToolbarPanel.cpp"
+					RelativePath="..\..\..\src\libtexture\ToolbarPanel.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libmap\ToolbarPanel.h"
+					RelativePath="..\..\..\src\libtexture\ToolbarPanel.h"
 					>
 				</File>
 			</Filter>
@@ -208,25 +208,9 @@
 		<Filter
 			Name="editop"
 			>
-			<File
-				RelativePath="..\..\..\src\libmap\PasteSymbolOP.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libmap\PasteSymbolOP.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libmap\SelectSpritesOP.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libmap\SelectSpritesOP.h"
-				>
-			</File>
 		</Filter>
 		<File
-			RelativePath="..\..\..\src\libmap\config.h"
+			RelativePath="..\..\..\src\libtexture\config.h"
 			>
 		</File>
 	</Files>
