[ADDED] symbol sprite for libtexture
Former-commit-id: 7d69807c69269d471c55dcd24056c227de45de04

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1812,6 +1812,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\drag2d\view\ShapesContainer.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\view\ShapesContainer.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\drag2d\view\SpritesContainer.cpp"
 						>
 					</File>
